Made CSS changes to fix the header and overlapping grid.

--- a/src/app/data/data.component.css
+++ b/src/app/data/data.component.css
@@ -81,7 +81,7 @@
     padding-top: 25px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-top: 40px;
+    margin-top: 76px;
     padding-bottom: 10px;
     border-radius: 3px;
     position:relative;
